--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^3.1.3",
     "vue-lazyload": "^1.3.3",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
+    "@vant/touch-emulator": "^1.2.0",
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-eslint": "~4.2.0",
     "@vue/cli-plugin-router": "~4.2.0",
